--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "constructs": "^10.1.314",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
