elastic search module [yandex cloud]

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -152,3 +152,9 @@ stacks:
             databasesAccess: test
 
 
+    ## elastic search
+    elasticSearchClusters:
+      - name: my-cluster
+        network: my-vpc
+        subnet: internal-subnet-1c
+        environment: PRODUCTION
