add docker registry to examples [yandex cloud]

--- a/examples/example_1/config.yaml
+++ b/examples/example_1/config.yaml
@@ -84,7 +84,8 @@ stacks:
     publicInstances: []
 
     ## registries
-    registries: []
+    registries:
+      - name: my-registry
 
     ## k8s
     k8sClusters:
