call mysql module from infra module [yandex cloud]

--- a/config.yaml
+++ b/config.yaml
@@ -38,5 +38,8 @@ stacks:
     ## postgres
     pgClusters: []
 
+    ## mysql
+    mysqlClusters: []
+
     ## elastic search
     elasticSearchClusters: []
