provider / backend vpc module static ip module key pairs module k8s module + addons [sber cloud]

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 YC_TOKEN=
-ACCESS_KEY=
-SECRET_KEY=
-FOLDER_ID=
-CLOUD_ID=
-STATE_BUCKET_NAME=
+YC_ACCESS_KEY=
+YC_SECRET_KEY=
+YC_FOLDER_ID=
+YC_CLOUD_ID=
+YC_STATE_BUCKET_NAME=
+
+SBER_STATE_BUCKET_NAME=
+SBER_ACCESS_KEY=
+SBER_SECRET_KEY=
