sec groups module pg module [sber cloud]

--- a/config.yaml
+++ b/config.yaml
@@ -30,6 +30,12 @@ stacks:
     ## vpcs
     vpcs: []
 
+    ## secgroups
+    secGroups: []
+
+    ## postgres
+    pgClusters: []
+
     ## k8s
     k8sClusters: []
 
