--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@cdktf/provider-helm": "^7.0.0",
     "@cdktf/provider-kubernetes": "^8.0.0",
+    "@cdktf/provider-postgresql": "^9.0.1",
     "cdktf": "^0.17.3",
     "constructs": "^10.1.307",
     "dotenv": "^16.0.3",
